--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "name": "7 Pleasures",
   "short_name": "7 Pleasures",
   "description": "Track life's pleasures - intimacy, food, rest, and more",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#1a0a1f",
   "theme_color": "#dc2626",
